--- a/app/Resources/translations/groupform.fr.yml
+++ b/app/Resources/translations/groupform.fr.yml
@@ -2,5 +2,5 @@
 name:              Nom
 description:       Description
 open:              Ouvert
-openhelp:          Un groupe ouvert permet a n'importe qui de publier dans votre groupe
+openhelp:          Un groupe ouvert permet à n'importe qui de publier dans votre groupe
 tags:              Tags
