--- a/app/Resources/translations/network.fr.yml
+++ b/app/Resources/translations/network.fr.yml
@@ -5,7 +5,7 @@ search:
   search_u_n_g:         Rechercher des utilisateurs et des groupes
   users:                 Utilisateurs
   groups:               Groupes
-  no_result:            Il n'y a aucun résultat a votre recherche
+  no_result:            Il n'y a aucun résultat à votre recherche
   elements:             Musique
   form:
     submit_value:       Rechercher
