--- a/app/Resources/translations/userform.fr.yml
+++ b/app/Resources/translations/userform.fr.yml
@@ -15,5 +15,5 @@ cgu_accepted:     J'ai lu et j'accepete les <a href="%url%">condition générale
 
 help:
   token:   |
-            Rentrez ici le code qui vous à été fournis afin de vous inscrire 
-            a la version non publique.
+            Rentrez ici le code qui vous à été fourni afin de vous inscrire 
+            à la version non publique.
