Anomalie #667: Identifiant (login): Possibilité de s'identifié avec l'email

--- a/app/Resources/translations/userui.fr.yml
+++ b/app/Resources/translations/userui.fr.yml
@@ -9,7 +9,7 @@ login:
 
 security:
   login:
-    username: "Identifiant (adresse email)"
+    username: "Identifiant (pseudo ou email)"
     password: "Mot de passe"
 
 start:
