--- a/app/Resources/translations/validators.en.yml
+++ b/app/Resources/translations/validators.en.yml
@@ -32,7 +32,9 @@ error:
     name:
       notblank:          You must enter a name.
       toshort:           The name is too short.
+      toshort|error.element.name.toshort: The name is too short.
       tolong:            The name is too long.
+      tolong|error.element.name.tolong: The name is too long.
   url:
     invalid:             The URL is not a valid one.
   
