Anomalie #621: Messages d'erreurs login

--- a/app/Resources/translations/users.en.yml
+++ b/app/Resources/translations/users.en.yml
@@ -35,4 +35,4 @@ reputation:
     title:                      Votre réputation
 
 login:
-  fail:                         L'authentification a échoué
+  fail:                         Authentication fail
