Evolution #414: Navigation en mode non inscrit
Ouverture ecran de login et inscriptionen ajax. Gestion du login en ajax.
TODO: Inscription en ajax.

--- a/app/Resources/translations/navigationui.en.yml
+++ b/app/Resources/translations/navigationui.en.yml
@@ -10,6 +10,8 @@ container_menu:
 top_bar:
   my_account:           My account
   logout:               Logout
+  subscribe:            Subscribe
+  login:                Connexion
   
 network:
   mygroups:             My groups
