bug fix: Il n'atait pas effectué de test de dulicité sur l'email lors de l'insciption ... :/

--- a/app/Resources/translations/validators.en.yml
+++ b/app/Resources/translations/validators.en.yml
@@ -35,6 +35,9 @@ error:
       tolong:            The name is too long.|The name is too long.
   url:
     invalid:             The URL is not a valid one.
+  registration:
+    email:
+      duplicate:         Email address is already in use on muzi.ch
   
       
 registration:
